--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@ ul, ol {
   padding: 0;
   margin: 0; }
 
+  #map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
+  }
+
 .spad {
   padding-top: 100px;
   padding-bottom: 100px; }
