--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ Table of contents
 	Main Styles
 ----------------------*/
 html, body {
-  height: 100%; }
+  height: 100%;
+ }
 
 body {
   font-family: 'Poppins', sans-serif;
@@ -242,7 +243,7 @@ ul, ol {
   transition: all 0.3s ease 0s; }
   .main-manu ul {
     height: 250px;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     list-style: none; }
   .main-manu a {
     font-size: 35px;
@@ -542,7 +543,8 @@ ul, ol {
     top: 0;
     background: #000;
     opacity: 0;
-    transition: all 0.4s ease 0s; }
+    transition: all 0.4s ease 0s;
+    border-radius: 20px; }
   .portfolio-item .portfolio-text {
     position: absolute;
     left: 50px;
